changed output of long and lat to a String

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
-spring.datasource.username=andrewbrown
+spring.datasource.username=darrenlackie
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
