--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>ParkingServer3.1.6</artifactId>
+	<artifactId>ParkingServer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ParkingServer3.1.6</name>
+	<name>ParkingServer</name>
 	<description>Server for the parking app</description>
 	<properties>
 		<java.version>17</java.version>
